--- a/src/applicants.html
+++ b/src/applicants.html
@@ -5,50 +5,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--Link added for bootstrap-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style/css.css">
 	<link rel="icon" href="assets/umkc-logo.png">
-	<link rel="stylesheet" type="text/css"
-		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<style>
-		body {
-			background-color: whitesmoke;
-		}
-
-		.container{
-			box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-			background-color: white;
-		}
-
-		table.dataTable {
-			clear: both;
-			margin-top: none!important; 
-			margin-bottom: 6px !important;
-			max-width: none !important;
-			/* border-collapse: separate !important; */
-			border-spacing: 0;
-		}
-		.btn-apply{
-			background-color: #FFdd00;
-			border-color:#FFdd00;
-			color: #044c7c;
-			margin-right: 25px;
-			width: max-content;
-			font-weight: bolder;
-		}
-
-		.btn-apply:hover{
-			background-color: #044c7c;
-			color: #FFdd00;
-			box-shadow: 3px 3px 3px #FFdd00;
-		}
-	</style>
-	<title>Applicants</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -58,6 +21,41 @@
 	<script src="script/applicants/applicantsfilter.js"></script>
 	<script type="module" src="script/applicants/applicantsdatabase.js"></script>
 	<script src="script/redirect.js"></script>
+	<style>
+		body {
+			background-color: whitesmoke;
+		}
+
+		.container {
+			box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+			background-color: white;
+		}
+
+		table.dataTable {
+			clear: both;
+			margin-top: none !important;
+			margin-bottom: 6px !important;
+			max-width: none !important;
+			/* border-collapse: separate !important; */
+			border-spacing: 0;
+		}
+
+		.btn-apply {
+			background-color: #FFdd00;
+			border-color: #FFdd00;
+			color: #044c7c;
+			margin-right: 25px;
+			width: max-content;
+			font-weight: bolder;
+		}
+
+		.btn-apply:hover {
+			background-color: #044c7c;
+			color: #FFdd00;
+			box-shadow: 3px 3px 3px #FFdd00;
+		}
+	</style>
+	<title>Applicants</title>
 </head>
 
 <body>
@@ -67,30 +65,38 @@
 	</div>
 	<div class="divider"></div>
 	<div class="container-title sticky-top">
-		<h2 class="page-title"> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
+		<h2 class="page-title"> Applicants </h2>
 		<div>
-            <a id="logout" class="ms-3 btn btn-apply float-end me-0">Logout</a>
+			<a id="logout" class="ms-3 btn btn-apply float-end me-0">Logout</a>
 		</div>
 	</div>
 
 	<div class="p-3 card filter card-filter sticky-left">
-        <label class="filter-label">Major:</label>
-        <div class="form-check" id="major">
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="CS">CS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="IT">IT</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="ECE">ECE</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="EE">EE</label><br>
-        </div>
-        <label class="mt-2 filter-label">Level:</label>
-        <div class="form-check" id="level">
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev" value="BS">BS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev" value="MS">MS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev" value="PhD">PhD</label><br>
-        </div>
-    </div>
+		<label class="filter-label">Major:</label>
+		<div class="form-check" id="major">
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+					value="CS">CS</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+					value="IT">IT</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+					value="ECE">ECE</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+					value="EE">EE</label><br>
+		</div>
+		<label class="mt-2 filter-label">Level:</label>
+		<div class="form-check" id="level">
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+					value="BS">BS</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+					value="MS">MS</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+					value="PhD">PhD</label><br>
+		</div>
+	</div>
 
 	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
+			<h3><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 			<thead>
 				<tr>
 					<th>Student Id</th>
@@ -105,69 +111,24 @@
 					<th></th>
 				</tr>
 			</thead>
-				<!--<tr>
-					<td>Student Id</td>
-					<td>Name</td>
-					<td>Email</td>
-					<td>Level</td>
-					<td>Major</td>
-					<td>GPA</td>
-					<td>Hours</td>
-					<td><div id="0123456789ABCDEF0123gpa"><select class="gtaselect btn btn-primary applicant-table-btn" student="0123456789ABCDEF0123"><option value="0" id="0123456789ABCDEF0123">Not Available</option><option value="1" id="0123456789ABCDEF0123">Pending</option><option value="2" id="0123456789ABCDEF0123">Certified</option></select></div></td>
-					<td><div id="0123456789ABCDEF0123doc"><select id="pdfbtn" class="btn btn-primary applicant-table-btn" student="0123456789ABCDEF0123"><option value="documents" disabled="true" hidden="true" selected="true">Documents</option><option value="resume">Resume</option><option value="transcript">Transcript</option><option value="gta">GTA</option></select></div></td>
-					<td><button type="button" class="btn btn-danger remove applicant-table-btn" value="0123456789ABCDEF0123"><i class="bi bi-trash"></i></button></td>
-				</tr>-->
-			<tbody>
-				
-			</tbody>
+			<tbody></tbody>
 		</table>
 		<a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
-
 	</div>
-
-	<!-- Modal -->
-	<!--<div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-		<iframe id="iframepdf" src="files/transcript.pdf"></iframe>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>-->
 
 	<div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog modal-xl">
 			<div class="modal-content">
-				<!--<div class="modal-header">
-				<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            </div>-->
 				<div class="modal-body">
 					<iframe id="iframepdf" src="" width="100%" height="580"></iframe>
-					<!--<iframe src="files/transcript.pdf" width="100%" height="580" frameborder="0" ></iframe>-->
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 				</div>
 			</div>
-			<!-- /.modal-content -->
 		</div>
-		<!-- /.modal-dialog -->
 	</div>
-	<!-- /.modal -->
-
 </body>
 
 </html>
