--- a/src/admin.html
+++ b/src/admin.html
@@ -5,22 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Link added for bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style/css.css">
     <link rel="icon" href="assets/umkc-logo.png">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--Script added for bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/admin/adminwrite.js"></script>
     <script type="module" src="script/admin/admindatabase.js"></script>
-	<script src="script/redirect.js"></script>
+    <script src="script/redirect.js"></script>
     <title>Dashboard</title>
 </head>
 
@@ -31,14 +25,10 @@
     </div>
     <div class="divider"></div>
     <div class="container-title sticky-top">
-        <h2 class="page-title">Positions
-        </h2>
-
+        <h2 class="page-title">Positions</h2>
         <div class="add-button">
-            <a id="newbutton" href="createposition.html?new" id="newbutton" value=""
-                class="btn btn-apply float-end">Add Position</a>
+            <a id="newbutton" href="createposition.html?new" id="newbutton" value="" class="btn btn-apply float-end">Add Position</a>
         </div>
-
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
                 placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
@@ -46,7 +36,6 @@
                 <i class="fa fa-search"></i>
             </span>
         </div>
-
         <div>
             <a id="logout" class="ms-3 btn-apply btn float-end me-0">Logout</a>
         </div>
@@ -55,42 +44,41 @@
     <div class="mb-3 p-3 card filter card-filter sticky-left">
         <label style="font-weight: bold;">Major:</label>
         <div class="form-check" id="test">
-            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="CS"
-                    value="CS"/>CS</label><br>
-            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="IT"
-                    value="IT"/>IT</label><br>
-            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="ECE"
-                    value="ECE"/>ECE</label><br>
-            <!--<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>-->
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major"
+                    type="checkbox" id="CS" value="CS" />CS</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major"
+                    type="checkbox" id="IT" value="IT" />IT</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major"
+                    type="checkbox" id="ECE" value="ECE" />ECE</label><br>
         </div>
         <label class="mt-2" style="font-weight: bold;">Position:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position" type="checkbox"
-                    id="Grader" value="Grader"/>Grader</label><br>
-            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position" type="checkbox"
-                    id="Instructor" value="Instructor"/>Instructor</label><br>
+            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position"
+                    type="checkbox" id="Grader" value="Grader" />Grader</label><br>
+            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position"
+                    type="checkbox" id="Instructor" value="Instructor" />Instructor</label><br>
         </div>
         <label class="mt-2" style="font-weight: bold;">Semester:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox" id="Fall"
-                    value="Fall"/>Fall</label><br>
-            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox"
-                    id="Spring" value="Spring"/>Spring</label><br>
-            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox"
-                    id="Summer" value="Summer"/>Summer</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester"
+                    type="checkbox" id="Fall" value="Fall" />Fall</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester"
+                    type="checkbox" id="Spring" value="Spring" />Spring</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester"
+                    type="checkbox" id="Summer" value="Summer" />Summer</label><br>
         </div>
         <label class="mt-2" style="font-weight: bold;">Level:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox" id="grad"
-                    value="grad"/>Graduate</label><br>
             <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox"
-                    id="undergrad" value="undergrad"/>Undergraduate </label><br>
+                    id="grad" value="grad" />Graduate</label><br>
+            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox"
+                    id="undergrad" value="undergrad" />Undergraduate </label><br>
         </div>
         <div class="mt-3 form-check">
-            <label class="checkbox form-check-label app-checkbox"><input class="form-check-input hasapplicants" type="checkbox"
-                    id="applicants" value="applicants"checked />Applicants</label><br>
-            <label class="checkbox form-check-label app-checkbox"><input class="form-check-input hasapplicants" type="checkbox"
-                    id="noapplicants" value="noapplicants"/>No Applicants </label><br>
+            <label class="checkbox form-check-label app-checkbox"><input class="form-check-input hasapplicants"
+                    type="checkbox" id="applicants" value="applicants" checked />Applicants</label><br>
+            <label class="checkbox form-check-label app-checkbox"><input class="form-check-input hasapplicants"
+                    type="checkbox" id="noapplicants" value="noapplicants" />No Applicants </label><br>
         </div>
         <div class="mt-3 form-check">
             <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
@@ -99,14 +87,13 @@
                     name="collapserdb" onchange="collapseCards('hide')" />Collapse</label><br>
         </div>
     </div>
-       
 
     <div class="row open-position-container" id="open-position-container">
         <div class="col-sm-4" id="sample">
             <div class="card mb-3 class-card" id="card">
                 <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                    <h5 class="card-header target"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
-                            class="float-end right-card-title" id="applicants">0 Applicants</span></h5>
+                    <h5 class="card-header target"><span id="classname">IT 390</span> (<span
+                            id="semester">Summer</span>)<span class="float-end right-card-title" id="applicants">0 Applicants</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
                     <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label> <br>
@@ -114,15 +101,12 @@
                     <div class="notes-wrapper admin-notes">
                         <span id="notes">None</span>
                     </div>
-
-                        <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn" style="height:50px; line-height:35px;">See
-                            Applicants</a>
-                        <div class="mt-2 open-position-input-group input-group float-end">
-                            <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn">Edit Notes</a>
-                            <button id="closebutton" value="" class="input-group-btn btn submit-btn">Close
-                                Position</button>
-                        </div>    
-
+                    <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn"
+                        style="height:50px; line-height:35px;">See Applicants</a>
+                    <div class="mt-2 open-position-input-group input-group float-end">
+                        <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn">Edit Notes</a>
+                        <button id="closebutton" value="" class="input-group-btn btn submit-btn">Close Position</button>
+                    </div>
                     <br>
                 </div>
             </div>
